# auto-doc-generator

./: .gitignore  README.md  config.json  main.py  pyproject.toml  start.bat  start.sh
data/: Демо таблица.xlsx  Демо шаблон.docx
output/: report.xlsx
output/word/: 0001.docx
src/: __init__.py
src/core/: __init__.py  excel_processor.py  pdf_converter.py  word_processor.py
src/utils/: logger.py  statistics.py
