[project]
name = "auto-doc-generator"
version = "0.1.0"
description = "Excel to Word/PDF automation tool - массовая генерация документов по шаблонам"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2pdf>=0.1.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "python-docx>=1.1.2",
]
authors = [{ name = "hawkxdev" }]
keywords = [
    "python",
    "excel",
    "word",
    "pdf",
    "automation",
    "documents",
    "docx",
    "office",
]
